<?xml version="1.0"?>
<package>
  <name>traffic_light_detector</name>
  <version>0.0.0</version>
  <description>The traffic_light_detector package</description>

  <maintainer email="cilab@cilab.kr">cilab</maintainer>


  <license>TODO</license>


  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>